@startuml

title __DOMAIN's Class Diagram__\n

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.domain {
      interface Entity {
          {abstract} + equals()
          {abstract} + hashCode()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.domain {
      class Instrument {
          - id : Long
          - symbol : String
          - name : String
          - currency : String
          + Instrument()
          + getId()
          + getSymbol()
          + getName()
          + getCurrency()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.domain {
      class InstrumentPrice {
          - bid : BigDecimal
          - ask : BigDecimal
          - created : Date
          + InstrumentPrice()
          + getInstrument()
          + getVendor()
          + getBid()
          + getAsk()
          + getCreated()
          + getKey()
          + equals()
          + hashCode()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.domain {
      class InstrumentPriceKey {
          - instrumentId : Long
          - vendorId : Long
          - priceDate : Date
          ~ InstrumentPriceKey()
          + getInstrumentId()
          + getVendorId()
          + getPriceDate()
          + equals()
          + hashCode()
      }
    }
  }
  

  package com.inspiware.price.aggregator {
    package com.inspiware.price.aggregator.domain {
      class Vendor {
          - id : Long
          - name : String
          + Vendor()
          + getId()
          + getName()
      }
    }
  }
  

  InstrumentPrice -up-|> Entity
  InstrumentPrice o-- Instrument : instrument
  InstrumentPrice o-- Vendor : vendor
  InstrumentPrice o-- InstrumentPriceKey : key
  InstrumentPrice +-down- InstrumentPriceKey
  InstrumentPriceKey -up-|> Entity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
